--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mebs.vercel.app" />
+    <meta property="og:url" content="https://mebsolutions.vercel.app" />
     <meta
       property="og:title"
       content="Mandla Ebhubesi Business Solutions (MEBS) | Industrial Engineering & Maintenance Services"
@@ -38,12 +38,12 @@
     />
     <meta
       property="og:image"
-      content="https://mebs.vercel.appimages/mebs-og-image.jpg"
+      content="https://mebsolutions.vercel.appimages/mebs-og-image.jpg"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://mebs.vercel.app" />
+    <meta property="twitter:url" content="https://mebsolutions.vercel.app" />
     <meta
       property="twitter:title"
       content="Mandla Ebhubesi Business Solutions (MEBS) | Industrial Engineering & Maintenance Services"
@@ -54,7 +54,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://mebs.vercel.appimages/mebs-og-image.jpg"
+      content="https://mebsolutions.vercel.appimages/mebs-og-image.jpg"
     />
 
     <!-- Favicon -->
@@ -67,7 +67,7 @@
     <meta name="theme-color" content="#ffffff" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://mebs.vercel.app" />
+    <link rel="canonical" href="https://mebsolutions.vercel.app" />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -76,7 +76,7 @@
         "@type": "LocalBusiness",
         "name": "Mandla Ebhubesi Business Solutions (MEBS)",
         "description": "MEBS provides comprehensive engineering services including electrical maintenance, construction, industrial building repairs, plumbing, and industrial cleaning.",
-        "url": "https://mebs.vercel.app",
+        "url": "https://mebsolutions.vercel.app",
         "telephone": "+27-73-872-8919",
         "email": "nakedicollen@gmail.com",
         "address": {
